src/App.css
/* Chrome, Safari, Edge, Opera */
html,
body,
#app,
#app > div {
  height: 100%;
  overflow-y: hidden;
  background-color: #3c5a14;
}

#root {
  overflow-y: auto;
  height: 100%;
  font-family: "Courier New", Courier, monospace;
  color: #71B340;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type="number"] {
  -moz-appearance: textfield;
}

.opnav {
  background-color: #11270b;
  /* min-height: calc(100vh - 32px); */
  overflow-x: hidden;
  animation-duration: 0.5s;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  /* top: 32px; */
  position: fixed;
}

.historynav {
  background-color: #11270b;
  /* min-height: calc(100vh - 32px); */
  overflow-x: hidden;
  animation-duration: 0.5s;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  /* top: 32px; */
  position: fixed;
  right: 0;
}

.topnav {
  position: fixed;
  width: 100vw;
}

.calculator {
  flex-grow: 1;
  display: flex;
  justify-content: center;
  /* align-items: center; */
}

button,
input {
  font-family: "Courier New", Courier, monospace;
  background-color: #669D31;
  border:none;
  font-size: 1em;
  color: #11270B;
}

input:hover, button:hover {
  background-color: #71B340;
}

input:disabled, button:disabled {
  background-color: #598B2C;
}

.bar {
  width: 20px;
  height: 2px;
  background-color: #333;
  margin: 6px 0;
  transition: 0.4s;
}

.change1 {
  width: 20px;
  height: 2px;
  background-color: #333;
  margin: 6px 0;
  transition: 0.4s;
  -webkit-transform: translate(0px, 8px);
  transform: translate(0px, 8px);
}

.change2 {
  width: 20px;
  height: 2px;
  background-color: #333;
  margin: 6px 0;
  transition: 0.4s;
  opacity: 0;
}

.change3 {
  width: 20px;
  height: 2px;
  background-color: #333;
  margin: 6px 0;
  transition: 0.4s;
  -webkit-transform: translate(0px, -8px);
  transform: translate(0px, -8px);
}

.topnavbutton {
  background-color: #71b340;
  display: flex;
  justify-content: "space-between";
  align-items: center;
  border: none;
  font-size: medium;
}

.topnavbutton:hover {
  background-color: #669d31;
}

@keyframes sidenavOpenAnimation {
  from {
    width: 0%;
  }
  to {
    width: 25%;
  }
}

@keyframes sidenavCloseAnimation {
  from {
    width: 25%;
  }
  to {
    width: 0%;
  }
}

@media screen and (max-width: 600px) {
  .topnav {
    font-size: 0.5em;
  }

  @keyframes sidenavOpenAnimation {
    from {
      width: 0%;
    }
    to {
      width: 80%;
    }
  }

  @keyframes sidenavCloseAnimation {
    from {
      width: 80%;
    }
    to {
      width: 0%;
    }
  }
}

